--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,6 +1,11 @@
 .navbar{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-between !important;
+}
+
+.navbar-collapse{
+    display: flex;
+    justify-content: space-around;
 }
 
 .btn{
