--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -7,11 +7,21 @@
   border: 1px solid #ccc;
   border-radius: 8px;
   background-color: #f9f9f9;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 16px rgba(0, 0, 0, 0.1);
   text-align: center;
   font-family: Arial, sans-serif;
   display: flex;
   flex-direction: row;
+  }
+
+  .divImg{
+    display: flex;
+    align-items: center;
+}
+
+  .imagen{
+    max-width: 400px;
+    max-height: 400px;
   }
 
   .product-details div{
