--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -17,8 +17,8 @@
 
 /* Imagen del producto */
 .img {
-  width: 100%;
-  height: auto;
+  max-width: 300px;
+  max-height: 300px;
   object-fit: cover;
 }
 
@@ -29,6 +29,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
 }
 
 /* ID del producto (opcionalmente oculto) */
