--- a/src/components/ItemList/ItemList.css
+++ b/src/components/ItemList/ItemList.css
@@ -7,6 +7,7 @@
 .listUl {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
     list-style: none;
     padding: 0;
     margin: 0 auto;
